tdoc/common/static/tdoc/styles.css
/* Copyright 2024 Remy Blank <remy@c-space.org> */
/* SPDX-License-Identifier: MIT */

/* Utility classes */
.hidden:not(#¶) {
    display: none;
}
section.hidden-heading:not(#¶) > :is(h1, h2, h3, h4, h5, h6):first-child {
    display: none;
}
.line-height-normal:not(#¶) .highlight pre {
    line-height: normal;
}

/* Revert font attributes to pre pydata-sphinx-theme 0.16.0. */
html {
    --pst-font-size-h1: 2.5rem;
    --pst-font-size-h2: 2rem;
    --pst-font-size-h6: 1.1rem;
    --pst-font-weight-heading: 400;
}

/* Set the maximum width of sidebars instead of a fixed width. */
div.sidebar, aside.sidebar {
    max-width: 40%;
    width: inherit;
}

/* Make rulers darker. */
hr {
    opacity: 1;
}

/* Invert the even and odd row colors in tables, so that the first row below the
   header has a different color than the header. */
.table > tbody > tr:nth-child(even) {
    background-color: var(--pst-color-table-row-zebra-low-bg);
}
.table > tbody > tr:nth-child(odd) {
    background-color: var(--pst-color-table-row-zebra-high-bg);
}
.table > tbody.inv > tr:nth-child(even) {
    background-color: var(--pst-color-table-row-zebra-high-bg);
}
.table > tbody.inv > tr:nth-child(odd) {
    background-color: var(--pst-color-table-row-zebra-low-bg);
}
.table > tbody > tr:hover:hover {
    background-color: var(--pst-color-table-row-hover-bg);
}

/* Make quotation attributions a bit more compact. */
blockquote div > p:has(+ p.attribution) {
    margin-bottom: 0;
}

/* Server termination buttons */
.article-header-buttons > button.btn-terminate::before {
    font: var(--fa-font-solid);
    content: '\f52a';
}
.article-header-buttons > button.btn-terminate:hover::before {
    content: '\f52b';
}

/* TOC */
.bd-sidebar-primary li:is(.toctree-l1, .toctree-l2, .toctree-l3) > a {
    padding-left: 1.25rem;  /* The original padding is 0.65rem */
    text-indent: -0.6rem;
}
.page-toc li:is(.toc-h2, .toc-h3, .toc-h4, .toc-h5, .toc-h6) > a {
    padding-left: 1.5rem;  /* The original padding is 1rem */
    text-indent: -0.5rem;
}
.bd-toc .nav .toc-entry a.nav-link {
    /* Revert increased padding introduced in pydata-sphinx-theme 0.16.0. */
    padding-top: 0.125rem;
    padding-bottom: 0.125rem;
}
@media (min-width: 1200px) {
    .bd-sidebar-secondary {
        /* Remove undesired padding introduced in sphinx-book-theme 1.2.0. */
        padding-left: 0;
        padding-right: 0;
    }
}

/* Layout */
.page-break {
    break-before: page;
}
.column-break {
    break-before: column;
}
.allow-break:not(#¶) {
    break-inside: auto;
}
.avoid-break:not(#¶) {
    break-inside: avoid;
}
.columns-2 {
    column-count: 2;
}
.columns-3 {
    column-count: 3;
}
.columns-4 {
    column-count: 4;
}
.columns-5 {
    column-count: 5;
}
.columns-6 {
    column-count: 6;
}
.columns-7 {
    column-count: 7;
}
.columns-8 {
    column-count: 8;
}
.tdoc-hspace {
    display: inline-block;
}
.tdoc-vspace {
    display: block;
}

/* Hidden elements */
html:is([data-tdoc-hide~=navigation], [data-tdoc-hide~=navbar])
        .bd-header-article,
html:is([data-tdoc-hide~=navigation], [data-tdoc-hide~=primary-sidebar])
        .bd-sidebar-primary,
html:is([data-tdoc-hide~=navigation], [data-tdoc-hide~=primary-sidebar])
        .header-article-item:has(> button.primary-toggle),
html:is([data-tdoc-hide~=navigation], [data-tdoc-hide~=secondary-sidebar])
        :is(.bd-sidebar-secondary, #print-main-content),
html:is([data-tdoc-hide~=navigation], [data-tdoc-hide~=prev-next])
        .prev-next-footer,
html:is([data-tdoc-hide~=navigation], [data-tdoc-hide~=footer])
        .bd-footer-content {
    display: none;
}

/* Keep the margin below the title even if the TOC is removed. */
@media print {
    .bd-main .bd-content #jb-print-docs-body h1 {
        margin-bottom: 2.75rem;
    }
}

/* Leaders */
.tdoc-leader.eol {
    position: relative;
    overflow: hidden;
}
.tdoc-leader.eol::after {
    position: absolute;
    margin-left: 0.5rem;
}
.tdoc-leader:not(.eol) {
    display: inline-block;
    overflow: hidden;
    vertical-align: bottom;
}
.tdoc-leader::after {
    white-space: nowrap;
}
.tdoc-leader.c\.::after {
    content: "................................................................"
             "................................................................"
             "................................................................"
             "................................................................"
             "................................................................"
             "................................................................";
}
.tdoc-leader.cdot::after {
    content: "․․․․․․․․․․․․․․․․․․․․․․․․․․․․․․․․․․․․․․․․․․․․․․․․․․․․․․․․․․․․․․․․"
             "․․․․․․․․․․․․․․․․․․․․․․․․․․․․․․․․․․․․․․․․․․․․․․․․․․․․․․․․․․․․․․․․"
             "․․․․․․․․․․․․․․․․․․․․․․․․․․․․․․․․․․․․․․․․․․․․․․․․․․․․․․․․․․․․․․․․"
             "․․․․․․․․․․․․․․․․․․․․․․․․․․․․․․․․․․․․․․․․․․․․․․․․․․․․․․․․․․․․․․․․";
}
.tdoc-leader.c\_::after {
    content: "________________________________________________________________"
             "________________________________________________________________"
             "________________________________________________________________"
             "________________________________________________________________";
}

/* Grids */
.tdoc-grid {
    margin: 1rem 0;
    display: grid;
    gap: 1rem;
}
.tdoc-grid > div > :first-child {
    margin-top: 0;
}
.tdoc-grid > div > :last-child {
    margin-bottom: 0;
}

/* List styling */
:is(ol, ul):is(.columns-2, .columns-3, .columns-4, .columns-5, .columns-6,
               .columns-7, .columns-8):not(.none) {
    column-gap: 2rem;
}
:is(ol, ul).none {
    list-style-type: none;
    padding-left: 0;
}
:is(ol, ul).disc {
    list-style-type: disc;
}
:is(ol, ul).circle {
    list-style-type: circle;
}
:is(ol, ul).square {
    list-style-type: square;
}
:is(ol, ul).decimal {
    list-style-type: decimal;
}
/* ... */

